#131 Fix a project name overlaps with the switch button while mobile site

--- a/src/scss/Responsive.scss
+++ b/src/scss/Responsive.scss
@@ -146,7 +146,7 @@
     display: block;
     width: 100%;
     color: $color_white;
-    padding: .3em;
+    padding: .3em .3em .3em 1.5em;
     background: none;
     height: 50px;
     line-height: 40px;
